<resources>
    <string name="app_name">Petits Potins</string>
    <string name="text_username">Email or User</string>
    <string name="text_Password">Password</string>
    <string name="hint_Password">Your password</string>
    <string name="text_login">LOGIN</string>
    <string name="hint_username">email@domain.com</string>
    <string name="txt_welcome">Welcome</string>
    <string name="user">Leandro</string>
    <string name="txt_introduction">Introduction</string>
    <string name="txt_class1">Class 1</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_user">User :</string>
    <string name="txt_error">ERROR!</string>
    <string name="txt_error_inicio">Invalid username or password</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_action_logout">logout</string>
    <string name="txt_fab">Element added</string>
    <string name="txt_name_client">Customer name</string>
    <string name="txt_cc_client">Client ID</string>
    <string name="txt_cod_vent">Sale Code</string>
    <string name="txt_articode">Article Code</string>
    <string name="txt_fech_vent">Date of sale</string>
    <string name="txt_val_abon">Amount Paid</string>
    <string name="txt_btnabono">Load</string>
    <string name="txt_or">Or</string>
    <string name="txt_reg_abono">Payment Registration</string>
    <string name="txt_reg_venta">Sale Registration</string>
    <string name="txt_reg_arti">Article Registration</string>
    <string name="txt_date_vent">Sale Data</string>
    <string name="txt_cc_ven">Seller ID</string>
    <string name="txt_date_cli">Client data</string>
    <string name="txt_cli_name">Client name</string>
    <string name="txt_dire">Address</string>
    <string name="txt_lon">Length</string>
    <string name="txt_lati">Latitude</string>
    <string name="txt_data_art">Article Data</string>
    <string name="txt_type_art">Types of Articles</string>
    <string name="txt_anch">Width</string>
    <string name="txt_larg">Long</string>
    <string name="txt_home">Home</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_car">Sale</string>
    <string name="txt_list">List</string>
    <string name="txt_pay">Pay</string>
    <string name="txt_article">Article</string>
    <string name="txt_type_curtain">Curtain Type</string>
    <string name="txt_color_curtain">Curtain Color</string>
    <string name="txt_metersquare">Value per Square Meter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>