<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cafe_claro"
    tools:context=".LoginActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal|top"
            android:text="@string/app_name"
            android:textColor="@color/cafe"
            android:textSize="36sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_username"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="140dp"
            android:ems="11"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_Password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="230dp"
            android:ems="11"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/hint_Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginLeft="135dp"
            android:backgroundTint="@color/cafe"

            android:textColor="@color/white"
            android:text="@string/text_login"
            android:fontFamily="@font/poppins_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="410dp"
            android:text="@string/txt_or"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/facebook"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="490dp" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/twitter"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="490dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/google"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="490dp"
            />




    </androidx.cardview.widget.CardView>




</LinearLayout>