<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VentaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cafe_claro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/cafe_bar"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_medium"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@android:color/primary_text_dark">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal|top"
                    android:text="@string/txt_reg_venta"
                    android:textColor="#312E2C"
                    android:textSize="26sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:alpha=".45"
                    android:background="@drawable/cortina_3" >




                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_date_vent"
                        android:textColor="@color/dorado"
                        android:textSize="13sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="36dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_cod_vent"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtCodiVen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="55dp"
                        android:background="@drawable/design_text"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="9sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="36dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_fech_vent"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtFechVen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="text"
                        android:textSize="9sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="93dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_cc_ven"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtCcVen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="114dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="9sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="175dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_date_cli"
                        android:textColor="@color/dorado"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="190dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_cli_name"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtNameClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="210dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="text"
                        android:textSize="9sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="250dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_cc_client"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtCcClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="270dp"
                        android:background="@drawable/design_text"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textSize="9sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="250dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_dire"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtDireccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="270dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="text"
                        android:textSize="9sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="310dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_lati"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtLatitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="330dp"
                        android:background="@drawable/design_text"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textSize="9sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="310dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_lon"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtLongitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="330dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textSize="9sp" />


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="385dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_data_art"
                        android:textColor="@color/dorado"
                        android:textSize="13sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="400dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_type_art"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtTipoArt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="420dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="text"
                        android:textSize="9sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="460dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_anch"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtAncho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="480dp"
                        android:background="@drawable/design_text"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textSize="9sp" />


                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="460dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_larg"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtLargo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="205dp"
                        android:layout_marginTop="480dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/design_text"
                        android:ems="27"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:textSize="9sp" />

                    <Button
                        android:id="@+id/btnVenta"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginLeft="150dp"
                        android:layout_marginTop="550dp"
                        android:layout_marginBottom="35dp"
                        android:background="@drawable/design_button"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Load"
                        android:textColor="@color/white" />

                    <!--    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_marginStart="550dp"
                            android:layout_marginTop="560dp"
                            android:layout_marginBottom="40dp"
                            android:background="@drawable/design_button"
                            android:fontFamily="@font/poppins_medium"
                            android:text="login"
                            android:textColor="@color/white" />-->


                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>